--- a/day-2/index.html
+++ b/day-2/index.html
@@ -12,13 +12,13 @@
         <div class="image-holder">
                 <img src="./assets/illustration-article.svg" alt="card-preview">
                 <div>
-                    <button>Learning</button>
+                    <button type="button">Learning</button>
                     <p>Published 21 Dec 2023</p>
                 </div>
         </div>
         <!-- text holder -->
         <div class="text-holder">
-            <h2>HTML & CSS foundations</h2>
+            <h1>HTML & CSS foundations</h1>
             <p>These languages are the backbone of every website, defining structure, content and presentation.</p>
             <div class="avatar">
                 <img src="./assets/image-avatar.webp" alt="avatar">
