almost forgot I had to implement the active feature

--- a/day-3/index.html
+++ b/day-3/index.html
@@ -18,7 +18,7 @@
         <div class="social-links">
             <p>"Front-end developer and avid reader."</p>
             <div>
-                <button>GitHub</button>
+                <button class="active">GitHub</button>
                 <button>Frontend Mentor</button>
                 <button>LinkedIn</button>
                 <button>Twitter</button>
