--- a/day-3/index.html
+++ b/day-3/index.html
@@ -19,10 +19,10 @@
             <p>"Front-end developer and avid reader."</p>
             <div>
                 <button class="active" type="button">GitHub</button>
-                <button>Frontend Mentor</button>
-                <button>LinkedIn</button>
-                <button>Twitter</button>
-                <button>Instagram</button>
+                <button type="button">Frontend Mentor</button>
+                <button type="button">LinkedIn</button>
+                <button type="button">Twitter</button>
+                <button type="button">Instagram</button>
             </div>
         </div>
     </main>
