first section almost ready

--- a/day-4/index.html
+++ b/day-4/index.html
@@ -5,8 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="shortcut icon" href="./assets/favicon-32x32.png" type="image/x-icon">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <main>
+        <div class="container">
+            <div class="omolette">
+                <img src="./assets/image-omelette.jpeg" alt="omolette">
+                <div class="ingredients">
+                    <h1>Simple Omolette Recipe</h1>
+                    <span>An easy an quick dish, perfect for any meal. This classic omolette combines beaten eggs cooked to perfection, optionally filled with your choice of cheese, vegetables, or meats.</span>
+                </div>
+            </div>
+            <div></div>
+            <div></div>
+        </div>
+    </main>
+
 </body>
 </html>
