--- a/day-1/index.html
+++ b/day-1/index.html
@@ -1,29 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="shortcut icon" href="./assests/favicon-32x32.png" type="image/x-icon">
-    <link rel="stylesheet" href="style.css">
-</head>
+    <link
+      rel="shortcut icon"
+      href="./assests/favicon-32x32.png"
+      type="image/x-icon"
+    />
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-<body>
+  <body>
     <main class="container">
-        <!-- qr code xture -->
-         <div class="sub-content">
-
-             <div class="box5">
-                 <img src="./assests/image-qr-code.png" alt="QR Code">
-                </div>
-                <div class="box4">
-                    <h1>Improve your front-end skills by building projects</h1>
-                    <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
-                </div>
-            </div>
-
+      <!-- qr code xture -->
+      <div class="sub-content">
+        <div class="box5">
+          <img src="./assests/image-qr-code.png" alt="QR Code" />
+        </div>
+        <div class="box4">
+          <h1>Improve your front-end skills by building projects</h1>
+          <p>
+            Scan the QR code to visit Frontend Mentor and take your coding
+            skills to the next level
+          </p>
+        </div>
+      </div>
     </main>
-</body>
-
+  </body>
 </html>
