omolette landing page

--- a/day-4/index.html
+++ b/day-4/index.html
@@ -16,6 +16,24 @@
                     <h1>Simple Omolette Recipe</h1>
                     <span>An easy an quick dish, perfect for any meal. This classic omolette combines beaten eggs cooked to perfection, optionally filled with your choice of cheese, vegetables, or meats.</span>
                 </div>
+                <div class="prep-time">
+                    <h3>Preparation time</h3>
+                    <ul>
+                        <li>Total: <span>Approximately 10 minutes</span></li>
+                        <li>Preparation: <span>5 minutes</span></li>
+                        <li>Cooking: <span>5 minutes</span></li>
+                    </ul>
+                </div>
+                <div class="small-ingred">
+                    <h2>Ingredients</h2>
+                    <ul>
+                        <li>2-3 large eggs</li>
+                        <li>Salt to taste</li>
+                        <li>Pepper, to taste</li>
+                        <li>1 tablespoon of butter or oil</li>
+                        <li>Optional fillings: cheese, diced vegetables, cooked meats herbs</li>
+                    </ul>
+                </div>
             </div>
             <div></div>
             <div></div>
