--- a/day-4/index.html
+++ b/day-4/index.html
@@ -35,8 +35,41 @@
                     </ul>
                 </div>
             </div>
-            <div></div>
-            <div></div>
+            <div class="instructions">
+                <h2>Instructions</h2>
+                <ol>
+                    <li>Beat the eggs: <span>In a bowl beat the eggs with a pinch of salt and pepper until they are all well mixed. You can add a tablespoon of water or milk for a fluffier texture.</span></li>
+                    <li>Heat the pan: <span>Place a non-sick frying pan over medium heat and add butter or oil.</span></li>
+                    <li>Cook the omelette: <span>Once the butter is melted and bubbling, pour in the eggs. Tilt the pan to ensure the eggs evenly coat the surface.</span></li>
+                    <li>Add fillings (optional): <span>When the eggs begin to set at the edges but are stil slightly runny in the middle, sprinkle your chosen fillings over one half or the omelette.</span></li>
+                    <li>Fold and serve: <span>As the omelette continues to cook, carefully lift one edge and fold it over the fillings. Let it cook for another minute, then slide it onto a plate</span></li>
+                    <li>Enjoy: <span>Serve hot, with additional salt and pepper if needed.</span></li>
+                </ol>
+            </div>
+            <div class="nutrition">
+                <h2>Nutrition</h2>
+                <p>The table below shows nutritional values per serving without the additional fillings.</p>
+                    <table>
+                        <tbody>
+                            <tr>
+                                <td>Calories</td>
+                                <td>277kcal</td>
+                            </tr>
+                            <tr>
+                                <td>Carbs</td>
+                                <td>0g</td>
+                            </tr>
+                            <tr>
+                                <td>Protein</td>
+                                <td>20g</td>
+                            </tr>
+                            <tr>
+                                <td>Fat</td>
+                                <td>22g</td>
+                            </tr>
+                        </tbody>
+                    </table>
+            </div>
         </div>
     </main>
 
