--- a/day-5/index.html
+++ b/day-5/index.html
@@ -5,8 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Product preview card</title>
     <link rel="shortcut icon" href="asset/favicon-32x32.png" type="image/x-icon">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <main>
+        <div class="container">
+            <div></div>
+            <div></div>
+        </div>
+    </main>
 </body>
 </html>
