added image already

--- a/day-5/index.html
+++ b/day-5/index.html
@@ -10,8 +10,23 @@
 <body>
     <main>
         <div class="container">
-            <div></div>
-            <div></div>
+            <div class="picture">
+                <img src="asset/image-product-desktop.jpg" alt="">
+            </div>
+            <div class="description">
+                <div class="text">
+                    <p>Perfume</p>
+                    <h1>Gabrielle Essence Eau De Parfum</h1>
+                    <span>A floral, solar and voluptuous interpretation composed by Olivier Polge, Perfumer-creator for the house of CHANEL.</span>
+                </div>
+                <div class="price">
+                    <div>
+                        <strong class="discount">$149.99</strong>
+                        <span >$169.99</span>
+                    </div>
+                    <button>Add to Cart</button>
+                </div>
+            </div>
         </div>
     </main>
 </body>
