restructuring the dom xture

--- a/day-5/index.html
+++ b/day-5/index.html
@@ -1,33 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Product preview card</title>
-    <link rel="shortcut icon" href="asset/favicon-32x32.png" type="image/x-icon">
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link
+      rel="shortcut icon"
+      href="asset/favicon-32x32.png"
+      type="image/x-icon"
+    />
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <main>
-        <div class="container">
-            <div class="picture">
-                <img src="asset/image-product-desktop.jpg" alt="">
-            </div>
-            <div class="description">
-                <div class="text">
-                    <p>Perfume</p>
-                    <h1>Gabrielle Essence Eau De Parfum</h1>
-                    <span>A floral, solar and voluptuous interpretation composed by Olivier Polge, Perfumer-creator for the house of CHANEL.</span>
-                </div>
-                <div class="price">
-                    <div>
-                        <strong class="discount">$149.99</strong>
-                        <span >$169.99</span>
-                    </div>
-                    <button>Add to Cart</button>
-                </div>
-            </div>
+      <div class="container">
+        <div class="picture">
+          <img src="asset/image-product-desktop.jpg" alt="" />
         </div>
+        <div class="description">
+          <p>Perfume</p>
+          <h1>Gabrielle Essence Eau De Parfum</h1>
+          <span>
+            A floral, solar and voluptuous interpretation composed by Olivier
+            Polge, Perfumer-creator for the house of CHANEL.
+        </span>
+    </div>
+          <div class="price">
+              <span class="current-price">$149.99</span>
+              <span class="original-price">$169.99</span>
+            <button class="add-to-cart">Add to Cart</button>
+          </div>
+      </div>
     </main>
-</body>
+  </body>
 </html>
