--- a/index.html
+++ b/index.html
@@ -7,13 +7,29 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
+    <!-- <div class="container">
         <div class="one">1</div>
         <div class="two">2</div>
         <div class="three">3</div>
         <div class="four">4</div>
         <div class="five">5</div>
         <div class="six">6</div>
+    </div> -->
+
+    <div class="content">
+        <div class="image">
+            <p>I</p>
+        </div>
+        <div class="subject">
+            <div>
+                <h1>Mathematics</h1>
+                <p>From basic algebra to advanced calculus and beyond</p>
+            </div>
+            <div class="icon">
+                <span>156 articles</span>
+                <strong>A</strong>
+            </div>
+        </div>
     </div>
 </body>
 </html>
