--- a/day-5/index.html
+++ b/day-5/index.html
@@ -13,24 +13,54 @@
   </head>
   <body>
     <main>
-      <div class="container">
-        <div class="picture">
-          <img src="asset/image-product-desktop.jpg" alt="" />
+        <div class="product-card">
+        <div class="product-image">
+            <img src="asset/image-product-desktop.jpg" alt="">
         </div>
-        <div class="description">
-          <p>Perfume</p>
-          <h1>Gabrielle Essence Eau De Parfum</h1>
-          <span>
-            A floral, solar and voluptuous interpretation composed by Olivier
-            Polge, Perfumer-creator for the house of CHANEL.
-        </span>
-    </div>
-          <div class="price">
-              <span class="current-price">$149.99</span>
-              <span class="original-price">$169.99</span>
-            <button class="add-to-cart">Add to Cart</button>
-          </div>
-      </div>
+        <div class="product-details"></div>
     </main>
   </body>
 </html>
+
+<!-- <div class="container">
+  <div class="picture">
+    <img src="asset/image-product-desktop.jpg" alt="" />
+  </div>
+  <div class="description">
+    <p>Perfume</p>
+    <h1>Gabrielle Essence Eau De Parfum</h1>
+    <span>
+      A floral, solar and voluptuous interpretation composed by Olivier
+      Polge, Perfumer-creator for the house of CHANEL.
+    </span>
+    <div class="price">
+        <span class="current-price">$149.99</span>
+        <span class="original-price">$169.99</span>
+      </div>
+      <button class="add-to-cart">
+          <span>Add to Cart</span>
+      </button>
+</div>
+</div> -->
+
+
+<!-- <div class="product-card">
+<div class="product-image">
+  <img src="asset/image-product-desktop.jpg" alt="Gabrielle Essence Eau De Parfum">
+</div>
+<div class="product-details">
+  <p class="category">PERFUME</p>
+  <h2 class="product-title">Gabrielle Essence Eau De Parfum</h2>
+  <p class="description">
+    A floral, solar and voluptuous interpretation composed by Olivier Polge,
+    Perfumer-Creator for the House of CHANEL.
+  </p>
+  <div class="price-section">
+    <span class="current-price">$149.99</span>
+    <span class="original-price">$169.99</span>
+  </div>
+  <button class="add-to-cart">
+    <span>🛒</span> Add to Cart
+  </button>
+</div>
+</div> -->
