--- a/day-5/index.html
+++ b/day-5/index.html
@@ -1,66 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Product preview card</title>
-    <link
-      rel="shortcut icon"
-      href="asset/favicon-32x32.png"
-      type="image/x-icon"
-    />
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <main>
-        <div class="product-card">
-        <div class="product-image">
-            <img src="asset/image-product-desktop.jpg" alt="">
-        </div>
-        <div class="product-details"></div>
-    </main>
-  </body>
-</html>
-
-<!-- <div class="container">
-  <div class="picture">
-    <img src="asset/image-product-desktop.jpg" alt="" />
-  </div>
-  <div class="description">
-    <p>Perfume</p>
-    <h1>Gabrielle Essence Eau De Parfum</h1>
-    <span>
-      A floral, solar and voluptuous interpretation composed by Olivier
-      Polge, Perfumer-creator for the house of CHANEL.
-    </span>
-    <div class="price">
-        <span class="current-price">$149.99</span>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Product Card</title>
+  <link rel="stylesheet" href="style.css">
+  <link rel="shortcut icon" href="asset/favicon-32x32.png" type="image/x-icon">
+</head>
+<body>
+  <div class="card">
+    <div class="card-image">
+      <img src="asset/image-product-desktop.jpg" alt="Gabrielle Perfume" />
+    </div>
+    <div class="card-content">
+      <p class="label">PERFUME</p>
+      <h2>Gabrielle Essence Eau De Parfum</h2>
+      <p class="description">
+        A floral, solar and voluptuous interpretation composed by Olivier Polge,
+        Perfumer-Creator for the House of CHANEL.
+      </p>
+      <div class="price-row">
+        <span class="price">$149.99</span>
         <span class="original-price">$169.99</span>
       </div>
-      <button class="add-to-cart">
-          <span>Add to Cart</span>
+      <button class="cart-button">
+        <span class="icon">🛒</span>
+        Add to Cart
       </button>
-</div>
-</div> -->
-
-
-<!-- <div class="product-card">
-<div class="product-image">
-  <img src="asset/image-product-desktop.jpg" alt="Gabrielle Essence Eau De Parfum">
-</div>
-<div class="product-details">
-  <p class="category">PERFUME</p>
-  <h2 class="product-title">Gabrielle Essence Eau De Parfum</h2>
-  <p class="description">
-    A floral, solar and voluptuous interpretation composed by Olivier Polge,
-    Perfumer-Creator for the House of CHANEL.
-  </p>
-  <div class="price-section">
-    <span class="current-price">$149.99</span>
-    <span class="original-price">$169.99</span>
+    </div>
   </div>
-  <button class="add-to-cart">
-    <span>🛒</span> Add to Cart
-  </button>
-</div>
-</div> -->
+</body>
+</html>
