concluded the design structure

--- a/day-5/index.html
+++ b/day-5/index.html
@@ -8,9 +8,11 @@
   <link rel="shortcut icon" href="asset/favicon-32x32.png" type="image/x-icon">
 </head>
 <body>
-  <div class="card">
-    <div class="card-image">
-      <img src="asset/image-product-desktop.jpg" alt="Gabrielle Perfume" />
+  <main>
+
+    <div class="card">
+      <div class="card-image">
+        <img src="asset/image-product-desktop.jpg" alt="Gabrielle Perfume" />
     </div>
     <div class="card-content">
       <p class="label">PERFUME</p>
@@ -29,5 +31,6 @@
       </button>
     </div>
   </div>
+</main>
 </body>
 </html>
