styling the hero section

--- a/day-6/index.html
+++ b/day-6/index.html
@@ -9,7 +9,14 @@
 </head>
 <body>
     <main>
-        <h1>Four Card</h1>
+        <div class="main-content">
+            <div class="text-content">
+                <h2>Reliable, efficient delivery</h2>
+                <p>Powered by Technology</p>
+                <span>Our Artificial intelligence powered tools use million of project data </br> points to ensure that your project is successful</span>
+            </div>
+            <div class="card-container"></div>
+        </div>
     </main>
 </body>
 </html>
