--- a/day-6/index.html
+++ b/day-6/index.html
@@ -15,7 +15,28 @@
                 <p>Powered by Technology</p>
                 <span>Our Artificial intelligence powered tools use million of project data </br> points to ensure that your project is successful</span>
             </div>
-            <div class="card-container"></div>
+            <div class="card-container">
+                <div class="card">
+                    <img src="assets/icon-supervisor.svg" alt="Supervisor Icon">
+                    <h3>Supervisor</h3>
+                    <p>Monitors activity to identify project roadblocks</p>
+                </div>
+                <div class="card">
+                    <img src="assets/icon-team-builder.svg" alt="Team Builder Icon">
+                    <h3>Team Builder</h3>
+                    <p>Scans our talent network to create the optimal team for your project</p>
+                </div>
+                <div class="card">
+                    <img src="assets/icon-karma.svg" alt="Karma Icon">
+                    <h3>Karma</h3>
+                    <p>Regularly evaluates our talent to ensure quality</p>
+                </div>
+                <div class="card">
+                    <img src="assets/icon-calculator.svg" alt="Calculator Icon">
+                    <h3>Calculator</h3>
+                    <p>Uses data from past projects to provide better delivery estimates</p>
+                </div>
+            </div>
         </div>
     </main>
 </body>
