designing the 2x2 grid display card

--- a/day-6/index.html
+++ b/day-6/index.html
@@ -16,25 +16,25 @@
                 <span>Our Artificial intelligence powered tools use million of project data </br> points to ensure that your project is successful</span>
             </div>
             <div class="card-container">
-                <div class="card">
-                    <img src="assets/icon-supervisor.svg" alt="Supervisor Icon">
+                <div class="card box">
                     <h3>Supervisor</h3>
                     <p>Monitors activity to identify project roadblocks</p>
+                    <img src="assets/icon-supervisor.svg" alt="Supervisor Icon">
                 </div>
-                <div class="card">
-                    <img src="assets/icon-team-builder.svg" alt="Team Builder Icon">
+                <div class="card box1">
                     <h3>Team Builder</h3>
                     <p>Scans our talent network to create the optimal team for your project</p>
+                    <img src="assets/icon-team-builder.svg" alt="Team Builder Icon">
                 </div>
-                <div class="card">
-                    <img src="assets/icon-karma.svg" alt="Karma Icon">
+                <div class="card box2">
                     <h3>Karma</h3>
                     <p>Regularly evaluates our talent to ensure quality</p>
+                    <img src="assets/icon-karma.svg" alt="Karma Icon">
                 </div>
-                <div class="card">
-                    <img src="assets/icon-calculator.svg" alt="Calculator Icon">
+                <div class="card box3">
                     <h3>Calculator</h3>
                     <p>Uses data from past projects to provide better delivery estimates</p>
+                    <img src="assets/icon-calculator.svg" alt="Calculator Icon">
                 </div>
             </div>
         </div>
