designing the 2x2 grid display card

--- a/day-6/index.html
+++ b/day-6/index.html
@@ -23,7 +23,7 @@
                 </div>
                 <div class="card box1">
                     <h3>Team Builder</h3>
-                    <p>Scans our talent network to create the optimal team for your project</p>
+                    <p>Scans our talent network to create the </br> optimal team for your project</p>
                     <img src="assets/icon-team-builder.svg" alt="Team Builder Icon">
                 </div>
                 <div class="card box2">
